--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "regular";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "2.4.85" !default;
+$mdi-version:          "2.5.94" !default;
 
 $mdi-icons: (
     "access-point": F002,
@@ -115,7 +115,11 @@ $mdi-icons: (
     "arrange-send-to-back": F040,
     "arrow-all": F041,
     "arrow-bottom-left": F042,
+    "arrow-bottom-left-bold-outline": F9B6,
+    "arrow-bottom-left-thick": F9B7,
     "arrow-bottom-right": F043,
+    "arrow-bottom-right-bold-outline": F9B8,
+    "arrow-bottom-right-thick": F9B9,
     "arrow-collapse": F615,
     "arrow-collapse-all": F044,
     "arrow-collapse-down": F791,
@@ -124,6 +128,10 @@ $mdi-icons: (
     "arrow-collapse-right": F793,
     "arrow-collapse-up": F794,
     "arrow-collapse-vertical": F84C,
+    "arrow-decision": F9BA,
+    "arrow-decision-auto": F9BB,
+    "arrow-decision-auto-outline": F9BC,
+    "arrow-decision-outline": F9BD,
     "arrow-down": F045,
     "arrow-down-bold": F72D,
     "arrow-down-bold-box": F72E,
@@ -131,6 +139,7 @@ $mdi-icons: (
     "arrow-down-bold-circle": F047,
     "arrow-down-bold-circle-outline": F048,
     "arrow-down-bold-hexagon-outline": F049,
+    "arrow-down-bold-outline": F9BE,
     "arrow-down-box": F6BF,
     "arrow-down-drop-circle": F04A,
     "arrow-down-drop-circle-outline": F04B,
@@ -150,9 +159,11 @@ $mdi-icons: (
     "arrow-left-bold-circle": F04F,
     "arrow-left-bold-circle-outline": F050,
     "arrow-left-bold-hexagon-outline": F051,
+    "arrow-left-bold-outline": F9BF,
     "arrow-left-box": F6C0,
     "arrow-left-drop-circle": F052,
     "arrow-left-drop-circle-outline": F053,
+    "arrow-left-right-bold-outline": F9C0,
     "arrow-left-thick": F04E,
     "arrow-right": F054,
     "arrow-right-bold": F733,
@@ -161,6 +172,7 @@ $mdi-icons: (
     "arrow-right-bold-circle": F056,
     "arrow-right-bold-circle-outline": F057,
     "arrow-right-bold-hexagon-outline": F058,
+    "arrow-right-bold-outline": F9C1,
     "arrow-right-box": F6C1,
     "arrow-right-drop-circle": F059,
     "arrow-right-drop-circle-outline": F05A,
@@ -168,7 +180,11 @@ $mdi-icons: (
     "arrow-split-horizontal": F93A,
     "arrow-split-vertical": F93B,
     "arrow-top-left": F05B,
+    "arrow-top-left-bold-outline": F9C2,
+    "arrow-top-left-thick": F9C3,
     "arrow-top-right": F05C,
+    "arrow-top-right-bold-outline": F9C4,
+    "arrow-top-right-thick": F9C5,
     "arrow-up": F05D,
     "arrow-up-bold": F736,
     "arrow-up-bold-box": F737,
@@ -176,7 +192,9 @@ $mdi-icons: (
     "arrow-up-bold-circle": F05F,
     "arrow-up-bold-circle-outline": F060,
     "arrow-up-bold-hexagon-outline": F061,
+    "arrow-up-bold-outline": F9C6,
     "arrow-up-box": F6C2,
+    "arrow-up-down-bold-outline": F9C7,
     "arrow-up-drop-circle": F062,
     "arrow-up-drop-circle-outline": F063,
     "arrow-up-thick": F05E,
@@ -202,6 +220,8 @@ $mdi-icons: (
     "backspace": F06E,
     "backup-restore": F06F,
     "badminton": F850,
+    "ballot": F9C8,
+    "ballot-outline": F9C9,
     "bandcamp": F674,
     "bank": F070,
     "barcode": F071,
@@ -283,6 +303,7 @@ $mdi-icons: (
     "bell-ring-outline": F09F,
     "bell-sleep": F0A0,
     "beta": F0A1,
+    "betamax": F9CA,
     "bible": F0A2,
     "bike": F0A3,
     "bing": F0A4,
@@ -323,7 +344,11 @@ $mdi-icons: (
     "book-variant": F0BF,
     "bookmark": F0C0,
     "bookmark-check": F0C1,
+    "bookmark-minus": F9CB,
+    "bookmark-minus-outline": F9CC,
     "bookmark-music": F0C2,
+    "bookmark-off": F9CD,
+    "bookmark-off-outline": F9CE,
     "bookmark-outline": F0C3,
     "bookmark-plus": F0C5,
     "bookmark-plus-outline": F0C4,
@@ -355,6 +380,8 @@ $mdi-icons: (
     "box": F0D4,
     "box-cutter": F0D5,
     "box-shadow": F637,
+    "braille": F9CF,
+    "brain": F9D0,
     "bridge": F618,
     "briefcase": F0D6,
     "briefcase-check": F0D7,
@@ -395,6 +422,7 @@ $mdi-icons: (
     "calendar-check": F0EF,
     "calendar-clock": F0F0,
     "calendar-edit": F8A6,
+    "calendar-heart": F9D1,
     "calendar-multiple": F0F1,
     "calendar-multiple-check": F0F2,
     "calendar-plus": F0F3,
@@ -402,6 +430,7 @@ $mdi-icons: (
     "calendar-range": F678,
     "calendar-remove": F0F4,
     "calendar-search": F94B,
+    "calendar-star": F9D2,
     "calendar-text": F0F5,
     "calendar-today": F0F6,
     "call-made": F0F7,
@@ -466,6 +495,7 @@ $mdi-icons: (
     "cash-100": F115,
     "cash-multiple": F116,
     "cash-usd": F117,
+    "cassette": F9D3,
     "cast": F118,
     "cast-connected": F119,
     "cast-off": F789,
@@ -475,6 +505,7 @@ $mdi-icons: (
     "ceiling-light": F768,
     "cellphone": F11C,
     "cellphone-android": F11D,
+    "cellphone-arrow-down": F9D4,
     "cellphone-basic": F11E,
     "cellphone-dock": F11F,
     "cellphone-erase": F94C,
@@ -543,18 +574,28 @@ $mdi-icons: (
     "chevron-double-right": F13E,
     "chevron-double-up": F13F,
     "chevron-down": F140,
+    "chevron-down-box": F9D5,
+    "chevron-down-box-outline": F9D6,
     "chevron-left": F141,
+    "chevron-left-box": F9D7,
+    "chevron-left-box-outline": F9D8,
     "chevron-right": F142,
+    "chevron-right-box": F9D9,
+    "chevron-right-box-outline": F9DA,
     "chevron-up": F143,
+    "chevron-up-box": F9DB,
+    "chevron-up-box-outline": F9DC,
     "chili-hot": F7B1,
     "chili-medium": F7B2,
     "chili-mild": F7B3,
     "chip": F61A,
-    "christiantiy": F952,
+    "christianity": F952,
     "church": F144,
     "circle": F764,
     "circle-edit-outline": F8D4,
+    "circle-medium": F9DD,
     "circle-outline": F765,
+    "circle-small": F9DE,
     "cisco-webex": F145,
     "city": F146,
     "clipboard": F147,
@@ -591,6 +632,7 @@ $mdi-icons: (
     "close-outline": F6C8,
     "closed-caption": F15E,
     "cloud": F15F,
+    "cloud-alert": F9DF,
     "cloud-braces": F7B4,
     "cloud-check": F160,
     "cloud-circle": F161,
@@ -633,11 +675,16 @@ $mdi-icons: (
     "comment-account-outline": F17C,
     "comment-alert": F17D,
     "comment-alert-outline": F17E,
+    "comment-arrow-left": F9E0,
+    "comment-arrow-left-outline": F9E1,
+    "comment-arrow-right": F9E2,
+    "comment-arrow-right-outline": F9E3,
     "comment-check": F17F,
     "comment-check-outline": F180,
     "comment-multiple": F85E,
     "comment-multiple-outline": F181,
     "comment-outline": F182,
+    "comment-plus": F9E4,
     "comment-plus-outline": F183,
     "comment-processing": F184,
     "comment-processing-outline": F185,
@@ -713,6 +760,7 @@ $mdi-icons: (
     "currency-krw": F7BC,
     "currency-kzt": F864,
     "currency-ngn": F1B0,
+    "currency-php": F9E5,
     "currency-rub": F1B1,
     "currency-sign": F7BD,
     "currency-try": F1B2,
@@ -746,6 +794,7 @@ $mdi-icons: (
     "delete-circle": F682,
     "delete-empty": F6CB,
     "delete-forever": F5E8,
+    "delete-outline": F9E6,
     "delete-restore": F818,
     "delete-sweep": F5E9,
     "delete-variant": F1C1,
@@ -754,6 +803,7 @@ $mdi-icons: (
     "deskphone": F1C3,
     "desktop-classic": F7BF,
     "desktop-mac": F1C4,
+    "desktop-mac-dashboard": F9E7,
     "desktop-tower": F1C5,
     "details": F1C6,
     "developer-board": F696,
@@ -777,10 +827,10 @@ $mdi-icons: (
     "dip-switch": F7C0,
     "directions": F1D0,
     "directions-fork": F641,
+    "disc": F5EE,
+    "disc-alert": F1D1,
+    "disc-player": F95F,
     "discord": F66F,
-    "disk": F5EE,
-    "disk-alert": F1D1,
-    "disk-player": F95F,
     "disqus": F1D2,
     "disqus-outline": F1D3,
     "division": F1D4,
@@ -803,6 +853,7 @@ $mdi-icons: (
     "dots-vertical-circle": F7C3,
     "douban": F699,
     "download": F1DA,
+    "download-multiple": F9E8,
     "download-network": F6F3,
     "drag": F1DB,
     "drag-horizontal": F1DC,
@@ -822,6 +873,7 @@ $mdi-icons: (
     "earth-box-off": F6CD,
     "earth-off": F1E8,
     "edge": F1E9,
+    "eight-track": F9E9,
     "eject": F1EA,
     "elephant": F7C5,
     "elevation-decline": F1EB,
@@ -832,6 +884,8 @@ $mdi-icons: (
     "email-open": F1EF,
     "email-open-outline": F5EF,
     "email-outline": F1F0,
+    "email-plus": F9EA,
+    "email-plus-outline": F9EB,
     "email-search": F960,
     "email-search-outline": F961,
     "email-secure": F1F1,
@@ -900,6 +954,8 @@ $mdi-icons: (
     "file-delimited": F218,
     "file-document": F219,
     "file-document-box": F21A,
+    "file-document-box-outline": F9EC,
+    "file-document-outline": F9ED,
     "file-download": F964,
     "file-download-outline": F965,
     "file-excel": F21B,
@@ -969,7 +1025,11 @@ $mdi-icons: (
     "floor-lamp": F8DC,
     "floor-plan": F820,
     "floppy": F249,
+    "floppy-variant": F9EE,
     "flower": F24A,
+    "flower-outline": F9EF,
+    "flower-tulip": F9F0,
+    "flower-tulip-outline": F9F1,
     "folder": F24B,
     "folder-account": F24C,
     "folder-download": F24D,
@@ -1022,6 +1082,8 @@ $mdi-icons: (
     "format-float-none": F269,
     "format-float-right": F26A,
     "format-font": F6D5,
+    "format-font-size-decrease": F9F2,
+    "format-font-size-increase": F9F3,
     "format-header-1": F26B,
     "format-header-2": F26C,
     "format-header-3": F26D,
@@ -1121,6 +1183,7 @@ $mdi-icons: (
     "gesture-two-double-tap": F741,
     "gesture-two-tap": F742,
     "ghost": F2A0,
+    "ghost-off": F9F4,
     "gift": F2A1,
     "git": F2A2,
     "github-box": F2A3,
@@ -1158,6 +1221,7 @@ $mdi-icons: (
     "google-hangouts": F2C9,
     "google-home": F823,
     "google-keep": F6DB,
+    "google-lens": F9F5,
     "google-maps": F5F5,
     "google-nearby": F2B9,
     "google-pages": F2BA,
@@ -1166,6 +1230,7 @@ $mdi-icons: (
     "google-play": F2BC,
     "google-plus": F2BD,
     "google-plus-box": F2BE,
+    "google-spreadsheet": F9F6,
     "google-translate": F2BF,
     "google-wallet": F2C0,
     "gpu": F8AD,
@@ -1280,6 +1345,7 @@ $mdi-icons: (
     "image-filter-none": F2F6,
     "image-filter-tilt-shift": F2F7,
     "image-filter-vintage": F2F8,
+    "image-move": F9F7,
     "image-multiple": F2F9,
     "image-off": F82A,
     "image-outline": F975,
@@ -1324,9 +1390,13 @@ $mdi-icons: (
     "keyboard-off": F310,
     "keyboard-outline": F97A,
     "keyboard-return": F311,
+    "keyboard-settings": F9F8,
+    "keyboard-settings-outline": F9F9,
     "keyboard-tab": F312,
     "keyboard-variant": F313,
     "kickstarter": F744,
+    "knife": F9FA,
+    "knife-military": F9FB,
     "kodi": F314,
     "label": F315,
     "label-outline": F316,
@@ -1362,6 +1432,8 @@ $mdi-icons: (
     "lava-lamp": F7D4,
     "layers": F328,
     "layers-off": F329,
+    "layers-off-outline": F9FC,
+    "layers-outline": F9FD,
     "lead-pencil": F64F,
     "leaf": F32A,
     "led-off": F32B,
@@ -1383,6 +1455,8 @@ $mdi-icons: (
     "lightbulb-on": F6E7,
     "lightbulb-on-outline": F6E8,
     "lightbulb-outline": F336,
+    "lighthouse": F9FE,
+    "lighthouse-on": F9FF,
     "link": F337,
     "link-off": F338,
     "link-variant": F339,
@@ -1424,6 +1498,7 @@ $mdi-icons: (
     "mail-ru": F34C,
     "mailbox": F6ED,
     "map": F34D,
+    "map-legend": FA00,
     "map-marker": F34E,
     "map-marker-circle": F34F,
     "map-marker-distance": F8EF,
@@ -1455,11 +1530,14 @@ $mdi-icons: (
     "menu-down": F35D,
     "menu-down-outline": F6B5,
     "menu-left": F35E,
+    "menu-left-outline": FA01,
     "menu-right": F35F,
+    "menu-right-outline": FA02,
     "menu-up": F360,
     "menu-up-outline": F6B6,
     "message": F361,
     "message-alert": F362,
+    "message-alert-outline": FA03,
     "message-bulleted": F6A1,
     "message-bulleted-off": F6A2,
     "message-draw": F363,
@@ -1492,6 +1570,8 @@ $mdi-icons: (
     "midi": F8F0,
     "midi-port": F8F1,
     "minecraft": F373,
+    "mini-sd": FA04,
+    "minidisc": FA05,
     "minus": F374,
     "minus-box": F375,
     "minus-box-outline": F6F1,
@@ -1504,6 +1584,7 @@ $mdi-icons: (
     "monitor": F379,
     "monitor-cellphone": F988,
     "monitor-cellphone-star": F989,
+    "monitor-dashboard": FA06,
     "monitor-multiple": F37A,
     "more": F37B,
     "motorbike": F37C,
@@ -1728,6 +1809,7 @@ $mdi-icons: (
     "pipe": F7E4,
     "pipe-disconnected": F7E5,
     "pipe-leak": F888,
+    "pirate": FA07,
     "pistol": F702,
     "piston": F889,
     "pizza": F409,
@@ -1762,6 +1844,7 @@ $mdi-icons: (
     "pocket": F41C,
     "podcast": F993,
     "pokeball": F41D,
+    "pokemon-go": FA08,
     "poker-chip": F82F,
     "polaroid": F41E,
     "poll": F41F,
@@ -1787,6 +1870,7 @@ $mdi-icons: (
     "power-socket-uk": F7E7,
     "power-socket-us": F7E8,
     "power-standby": F905,
+    "powershell": FA09,
     "prescription": F705,
     "presentation": F428,
     "presentation-play": F429,
@@ -1794,6 +1878,7 @@ $mdi-icons: (
     "printer-3d": F42B,
     "printer-alert": F42C,
     "printer-settings": F706,
+    "printer-wireless": FA0A,
     "priority-high": F603,
     "priority-low": F604,
     "professional-hexagon": F42D,
@@ -1813,6 +1898,8 @@ $mdi-icons: (
     "qrcode-scan": F433,
     "quadcopter": F434,
     "quality-high": F435,
+    "quality-low": FA0B,
+    "quality-medium": FA0C,
     "quicktime": F436,
     "rabbit": F906,
     "radar": F437,
@@ -1840,6 +1927,8 @@ $mdi-icons: (
     "reddit": F44D,
     "redo": F44E,
     "redo-variant": F44F,
+    "reflect-horizontal": FA0D,
+    "reflect-vertical": FA0E,
     "refresh": F450,
     "regex": F451,
     "relative-scale": F452,
@@ -1865,7 +1954,9 @@ $mdi-icons: (
     "rewind": F45F,
     "rewind-outline": F709,
     "rhombus": F70A,
+    "rhombus-medium": FA0F,
     "rhombus-outline": F70B,
+    "rhombus-split": FA10,
     "ribbon": F460,
     "rice": F7E9,
     "ring": F7EA,
@@ -1921,6 +2012,7 @@ $mdi-icons: (
     "seat-recline-normal": F482,
     "security": F483,
     "security-account": F88E,
+    "security-account-outline": FA11,
     "security-close": F99B,
     "security-home": F689,
     "security-lock": F99C,
@@ -2062,9 +2154,12 @@ $mdi-icons: (
     "square-edit-outline": F90B,
     "square-inc": F4CA,
     "square-inc-cash": F4CB,
+    "square-medium": FA12,
+    "square-medium-outline": FA13,
     "square-outline": F762,
     "square-root": F783,
     "square-root-box": F9A2,
+    "square-small": FA14,
     "ssh": F8BF,
     "stack-exchange": F60B,
     "stack-overflow": F4CC,
@@ -2098,6 +2193,8 @@ $mdi-icons: (
     "stove": F4DE,
     "subdirectory-arrow-left": F60C,
     "subdirectory-arrow-right": F60D,
+    "subtitles": FA15,
+    "subtitles-outline": FA16,
     "subway": F6AB,
     "subway-variant": F4DF,
     "summit": F785,
@@ -2123,6 +2220,7 @@ $mdi-icons: (
     "tab-plus": F75B,
     "tab-unselected": F4EA,
     "table": F4EB,
+    "table-border": FA17,
     "table-column": F834,
     "table-column-plus-after": F4EC,
     "table-column-plus-before": F4ED,
@@ -2213,6 +2311,8 @@ $mdi-icons: (
     "timetable": F520,
     "toggle-switch": F521,
     "toggle-switch-off": F522,
+    "toggle-switch-off-outline": FA18,
+    "toggle-switch-outline": FA19,
     "toilet": F9AA,
     "toolbox": F9AB,
     "toolbox-outline": F9AC,
@@ -2323,6 +2423,7 @@ $mdi-icons: (
     "vector-union": F564,
     "venmo": F578,
     "verified": F565,
+    "vhs": FA1A,
     "vibrate": F566,
     "video": F567,
     "video-3d": F7FC,
@@ -2338,11 +2439,13 @@ $mdi-icons: (
     "video-plus": F9B2,
     "video-stabilization": F91A,
     "video-switch": F569,
+    "video-vintage": FA1B,
     "view-agenda": F56A,
     "view-array": F56B,
     "view-carousel": F56C,
     "view-column": F56D,
     "view-dashboard": F56E,
+    "view-dashboard-outline": FA1C,
     "view-dashboard-variant": F842,
     "view-day": F56F,
     "view-grid": F570,
@@ -2357,7 +2460,8 @@ $mdi-icons: (
     "vimeo": F577,
     "violin": F60F,
     "virtual-reality": F893,
-    "visualstudio": F610,
+    "visual-studio": F610,
+    "visual-studio-code": FA1D,
     "vk": F579,
     "vk-box": F57A,
     "vk-circle": F57B,
@@ -2372,6 +2476,8 @@ $mdi-icons: (
     "volume-mute": F75E,
     "volume-off": F581,
     "volume-plus": F75C,
+    "vote": FA1E,
+    "vote-outline": FA1F,
     "vpn": F582,
     "vuejs": F843,
     "walk": F583,
@@ -2461,6 +2567,7 @@ $mdi-icons: (
     "window-open": F5B1,
     "window-restore": F5B2,
     "windows": F5B3,
+    "windows-classic": FA20,
     "wordpress": F5B4,
     "worker": F5B5,
     "wrap": F5B6,
@@ -2472,6 +2579,7 @@ $mdi-icons: (
     "xbox": F5B9,
     "xbox-controller": F5BA,
     "xbox-controller-battery-alert": F74A,
+    "xbox-controller-battery-charging": FA21,
     "xbox-controller-battery-empty": F74B,
     "xbox-controller-battery-full": F74C,
     "xbox-controller-battery-low": F74D,
@@ -2492,5 +2600,6 @@ $mdi-icons: (
     "youtube-creator-studio": F846,
     "youtube-gaming": F847,
     "youtube-tv": F448,
-    "zip-box": F5C4
+    "zip-box": F5C4,
+    "zip-disk": FA22
 );
